# cppcli

./: .env  .gitignore  CMakeLists.txt  TODO.md  readme.md
code/: code.cpp
include/: linenoise.h
src/: linenoise.c  main.cpp
templates/: templateTop.txt
